20Oct99=======================================================================
1. Translated all the subroutines of minimuf into perl as Minimuf.pm
2. Limited the length of an ANN that is saved for de-duping to $pc12_dup_lth
(def 72)
3. help command should now return stuff that you expect.
4. reduced necessary privilege to use 'MSG' command to 6.
5. Correct the count of spots and wwv for a merge.
6. Allow decodes of DK0WCY-3 WWV data beacon announces
7. rewrote send so that an SB doesn't send a buckshee bull to NOPRIVATE!
8. Changed default colouration on console so that all spots >= 50Mhz are red
9. Fixed init command so that PC21s are sent down non-initted channels
10. Allow forwarding of unknown private mail. This means that you can set up
forwarding of 'foreign' mail across to and by gateways using the same 
mechanism as bulletins (/spider/msg/forward.pl).
11. Allow line wrapping on the console (G0RDI, G0VGS et al).
18Oct99=======================================================================
1. changed help command so that it works correctly with multiple title lines.
2. added to address to the list of things a message checks to see whether it
is a duplicate (how on earth did it take _this_ long to find this one?).
3. Changes S CC so that the callsign it says it has sent to is the real one
(request from G8TIC)
21Sep99=======================================================================
1. allow zero messages to be stored (request from G4PDQ)
2. make DX more flexible and change spotter syntax to be consistant with
sh/dx (request from K9AN)
30Aug99=======================================================================
1. remove -@ as well as \d from SSIDs for spots
2. remove WEB and/or NET from the front or rear of callsigns in Prefix.pm
29Aug99=======================================================================
1. Added msg command to allow the changing of To, From, Subject and so on the