@@ -1,3 +1,6 @@
+21Oct99=======================================================================
+1. fixed reply so that reply b or reply nop generate a bulletin with the 
+correct address.
 20Oct99=======================================================================
 1. Translated all the subroutines of minimuf into perl as Minimuf.pm
 2. Limited the length of an ANN that is saved for de-duping to $pc12_dup_lth
